--- a/API/gateway.yaml
+++ b/API/gateway.yaml
@@ -1,21 +1,14 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: nginx-ingress
+  name: api-gateway
   annotations:
+    kubernetes.io/ingress.class: "nginx"
 spec:
-  ingressClassName: nginx
   rules:
     - host: kubernetes.docker.internal
       http:
         paths:
-          - path: /auth
-            pathType: Prefix
-            backend:
-              service:
-                name: auth-service
-                port:
-                  number: 80
           - path: /shop
             pathType: Prefix
             backend:
@@ -23,3 +16,10 @@ spec:
                 name: shop-service
                 port:
                   number: 9000
+          - path: /auth
+            pathType: Prefix
+            backend:
+              service:
+                name: auth-service
+                port:
+                  number: 80
