--- a/auth/deployment.yaml
+++ b/auth/deployment.yaml
@@ -10,7 +10,7 @@ spec:
       protocol: TCP
       port: 80
       targetPort: 5000
-  type: LoadBalancer
+  type: NodePort
 
 ---
 apiVersion: apps/v1
