--- a/shop/deployment.yaml
+++ b/shop/deployment.yaml
@@ -10,7 +10,7 @@ spec:
       protocol: TCP
       port: 9000
       targetPort: 5001
-  type: LoadBalancer
+  type: NodePort
 
 ---
 apiVersion: apps/v1
