--- a/API/gateway.yaml
+++ b/API/gateway.yaml
@@ -6,7 +6,7 @@ metadata:
   #   kubernetes.io/ingress.class: "nginx"
 spec:
   rules:
-    - host: mydomain.com
+    - host: kubernetes.docker.internal
       http:
         paths:
           - path: /shop
